kubernetes/argocd/apps/infrastructure/traefik/manifests/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-redirect-https
  namespace: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
